apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/component: demo-app
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
